Make fill tool produce regions with minimal size when a selection is used

BUG:415439